// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<SearchField /> Should render a SearchField component, on home screen 1`] = `
<div>
  <div
    class="guided-answer__header__searchField"
  >
    <div
      class="ms-SearchBox can-clear tree-search-field root-166"
    >
      <div
        aria-hidden="true"
        class="ms-SearchBox-iconContainer iconContainer-167"
      >
        <i
          aria-hidden="true"
          class="ms-SearchBox-icon icon-171"
          data-icon-name="Search"
        />
      </div>
      <input
        class="ms-SearchBox-field field-170"
        id="search-field"
        placeholder="Search Guided Answers"
        role="searchbox"
        value="fiori tools"
      />
      <div
        class="ms-SearchBox-clearButton clearButton-169"
      >
        <button
          aria-label="Clear text"
          class="ms-Button ms-Button--icon root-172"
          data-is-focusable="true"
          type="button"
        >
          <span
            class="ms-Button-flexContainer flexContainer-173"
            data-automationid="splitbuttonprimary"
          >
            <i
              aria-hidden="true"
              class="ms-Icon root-162 ms-Button-icon icon-175"
              data-icon-name="Clear"
            />
          </span>
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`<SearchField /> Should render a SearchField component, on search screen 1`] = `
<div>
  <div
    class="guided-answer__header__searchField"
  >
    <div
      class="ms-SearchBox can-clear tree-search-field root-166"
    >
      <div
        aria-hidden="true"
        class="ms-SearchBox-iconContainer iconContainer-167"
      >
        <i
          aria-hidden="true"
          class="ms-SearchBox-icon icon-171"
          data-icon-name="Search"
        />
      </div>
      <input
        class="ms-SearchBox-field field-170"
        id="search-field"
        placeholder="Search Guided Answers"
        role="searchbox"
        value="fiori tools"
      />
      <div
        class="ms-SearchBox-clearButton clearButton-169"
      >
        <button
          aria-label="Clear text"
          class="ms-Button ms-Button--icon root-172"
          data-is-focusable="true"
          type="button"
        >
          <span
            class="ms-Button-flexContainer flexContainer-173"
            data-automationid="splitbuttonprimary"
          >
            <i
              aria-hidden="true"
              class="ms-Icon root-162 ms-Button-icon icon-175"
              data-icon-name="Clear"
            />
          </span>
        </button>
      </div>
    </div>
    <div
      id="filters"
    >
      <button
        aria-disabled="true"
        class="ms-Button ms-Button--icon is-disabled filter-button filter-button-selected root-180"
        data-is-focusable="false"
        disabled=""
        id="filter-products"
        title="Filter Products"
        type="button"
      >
        <span
          class="ms-Button-flexContainer flexContainer-181"
          data-automationid="splitbuttonprimary"
        >
          <i
            aria-hidden="true"
            class="ms-Icon root-162 ms-Button-icon icon-182"
            data-icon-name="Table"
          />
        </span>
      </button>
      <button
        aria-disabled="true"
        class="ms-Button ms-Button--icon is-disabled filter-button filter-button-selected root-180"
        data-is-focusable="false"
        disabled=""
        id="filter-components"
        title="Filter Components"
        type="button"
      >
        <span
          class="ms-Button-flexContainer flexContainer-181"
          data-automationid="splitbuttonprimary"
        >
          <i
            aria-hidden="true"
            class="ms-Icon root-162 ms-Button-icon icon-182"
            data-icon-name="IdTag"
          />
        </span>
      </button>
    </div>
  </div>
</div>
`;
